# scholar-stream

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-ci.txt
.github/workflows/: ci.yml
app/: home.py
infra/: .plan-trigger  README.md  main.tf  outputs.tf  variables.tf
ingestion/: __init__.py  config.py  firehose_client.py  openalex_client.py  producer.py  schema.py  utils.py
sql/: 00_service_user.sql  01_init_snowflake.sql  02_rbac_policies.sql  03_tables_raw.sql  04_views_curated.sql  05_masking_policy.sql  06_link_public_key.sql.tmpl  apply.py  bootstrap_firehose_identity_secure.sh
tests/: conftest.py
tests/integration/: test_producer_flow.py
tests/unit/: test_config.py  test_firehose_client.py  test_openalex_client.py  test_producer_unit.py  test_schema.py  test_utils.py
