[project]
name = "scholar-stream"
version = "0.1.0"
description = "Scholar Stream Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "ruff>=0.12.10",
    "snowflake>=1.7.0",
    "streamlit>=1.48.1",
    "typer>=0.16.1",
]
